--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="9dp"
-        android:paddingRight="9dp"
+        android:paddingLeft="38dp"
+        android:paddingRight="48dp"
         android:paddingTop="32dp"
         android:paddingBottom="17dp">
 
@@ -32,10 +32,10 @@
                 android:id="@+id/ct_set_login_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -57,10 +57,10 @@
                 android:id="@+id/ct_verify_login_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -81,10 +81,10 @@
                 android:id="@+id/ct_set_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -105,10 +105,10 @@
                 android:id="@+id/ct_verify_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
