--- a/app/src/main/res/layout/fragment_call_back_by_security_card.xml
+++ b/app/src/main/res/layout/fragment_call_back_by_security_card.xml
@@ -25,6 +25,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="用户名" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/ct_user_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edit_text_color" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="问题一" />
 
             <Spinner
